@@ -1,3 +1,12 @@
+2012-11-16  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libdtrace/dt_impl.h (dt_print_aggdata): Move to...
+	* libdtrace/dtrace.h (dtrace_print_aggdata): ... here, and rename.
+	Add names to all unnamed arguments.
+	* libdtrace/dt_aggrecate.c (dtrace_aggregate_print): Adjust.
+	* libdtrace/dt_consume.c (dt_print_aggs): Likewise.
+	(dt_print_agg): Likewise.
+
 2012-11-12  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dt_symtab.c (DT_ST_PACKED): Use 0x02, not 0x03, so
